logs/habakkuk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Habakkuk-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/fparser'...
Listing './lib/python3.5/site-packages/fparser/tests'...
Listing './lib/python3.5/site-packages/fparser-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/habakkuk'...
Compiling './lib/python3.5/site-packages/habakkuk/dag.py'...
***   File "./lib/python3.5/site-packages/habakkuk/dag.py", line 148
    print "Schedule contains {0} steps:".format(nsteps)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/habakkuk/dag_node.py'...
***   File "./lib/python3.5/site-packages/habakkuk/dag_node.py", line 144
    print prefix+"\- "+self.name
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/habakkuk/make_dag.py'...
***   File "./lib/python3.5/site-packages/habakkuk/make_dag.py", line 42
    print "Code {0} contains no assignment statements - skipping".\
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/habakkuk/parse2003.py'...
***   File "./lib/python3.5/site-packages/habakkuk/parse2003.py", line 12
    print indent*"  " + "child type = ", type(child)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/habakkuk/tests'...
Compiling './lib/python3.5/site-packages/habakkuk/tests/dag_test.py'...
***   File "./lib/python3.5/site-packages/habakkuk/tests/dag_test.py", line 283
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/habakkuk/tests/make_dag_test.py'...
***   File "./lib/python3.5/site-packages/habakkuk/tests/make_dag_test.py", line 21
    print node_names
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/habakkuk/tests/parse_test.py'...
***   File "./lib/python3.5/site-packages/habakkuk/tests/parse_test.py", line 35
    print anode
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/habakkuk/tests/sched_test.py'...
***   File "./lib/python3.5/site-packages/habakkuk/tests/sched_test.py", line 104
    print cost
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
